--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-server.port: 9000
-management.port: 9001
-management.address: 127.0.0.1
 
-spring.datasource.url: jdbc:mysql://localhost:3306/mocky?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username: root
-spring.datasource.password: 123456
-
-spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.hibernate.ddl-auto: update
+spring.datasource.url = jdbc:mysql://localhost:3306/mock
+spring.datasource.username = root
+spring.datasource.password = 1234
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+server.port=9990
+spring.security.user.name=admin
+spring.security.user.password=1234
