--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "ramda": "^0.26.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "rxjs": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
