--- a/server/bin/src/main/resources/application.properties
+++ b/server/bin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/mock?useUnicode=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/mock
 spring.datasource.username = root
 spring.datasource.password = 1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
